@@ -1,4 +1,8 @@
 
+2016-06-14  Edward Hart <edward.dan.hart@gmail.com>
+
+	* general: moved uncommon aliases from reserved.c to config files.
+
 2016-06-03  Edward Hart <edward.dan.hart@gmail.com>
 
 	* general: added not-exception-before-exception configuration option.
